--- a/src/DataLayerBundle/Resources/views/T360Evaluations/edit.html.twig
+++ b/src/DataLayerBundle/Resources/views/T360Evaluations/edit.html.twig
@@ -1,6 +1,8 @@
-{% extends '::base.html.twig' %}
+
+{% extends 'AppT360Bundle::BasePage.html.twig' %}
 
 {% block body -%}
+    <div class="form-group col-lg-3">
     <h1>T360Evaluations edit</h1>
 
     {{ form(edit_form) }}
@@ -13,4 +15,6 @@
     </li>
     <li>{{ form(delete_form) }}</li>
 </ul>
+
+    </div>
 {% endblock %}
